--- a/src/app/components/upload-files/upload-files.component.css
+++ b/src/app/components/upload-files/upload-files.component.css
@@ -56,7 +56,7 @@
   border-radius: 25px;
   cursor: pointer;
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .file-input-container label:hover {
